--- a/src/style.sass
+++ b/src/style.sass
@@ -18,3 +18,11 @@ body
 .details__header
   @include media-breakpoint-down(xs)
     font-size: 1.75rem
+
+.page__container
+  @include media-breakpoint-up(md)
+    max-width: 750px
+  @include media-breakpoint-up(lg)
+    max-width: 960px
+  @include media-breakpoint-up(xl)
+    max-width: 1140px
